# quantlab

./: .context  .dockerignore  .env.example  .gitignore  Dockerfile  INTELLIGENCE.md  LICENSE  README.md  WRITEUP.md  pyproject.toml
configs/: base.yaml  mean_reversion.yaml  trend_following.yaml  universe_small.csv
docs/: SUBMIT_RUNBOOK.md  VIDEO_GUIDE.md  VIDEO_SCRIPT.md  architecture.md  architecture.mmd
docs/specs/: 2026-06-30-increment-B-honest-thin-core.md  2026-06-30-increment-C-intelligence-layer.md  2026-06-30-quantlab-decomposition-and-increment-A.md
scripts/: demo.py  mcp_demo.py
src/quantlab/: __init__.py  cli.py  config.py  indicators.py  manifest.py  mcp_server.py  portfolio.py  regime.py
src/quantlab/backtest/: vector.py
src/quantlab/data/: provider.py  qa.py  yf_provider.py
src/quantlab/intelligence/: __init__.py  agents.py  eval.py  guardrails.py  llm.py  memory.py  proposals.py  schemas.py
src/quantlab/intelligence/sources/: base.py  fixture.py  news_rss.py  reddit.py  stocktwits.py
src/quantlab/report/: metrics.py  report.py
src/quantlab/strategies/: base.py  mean_reversion.py  trend_following.py
tests/: test_backtest.py  test_config.py  test_data.py  test_import_purity.py  test_indicators.py  test_intel_eval.py  test_intel_guards.py  test_intel_memory.py  test_intel_pipeline.py  test_intel_proposals.py  test_manifest.py  test_mcp_server.py  test_portfolio.py  test_regime.py  test_strategies.py
