[project]
name = "quantlab"
version = "0.1.0"
description = "Research-grade algo-trading harness + multi-agent market-intelligence layer (5DGAI capstone)"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
    "yfinance>=0.2.40",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mcp>=1.0",
]
# live intelligence layer (Gemini + real sentiment sources). Not needed for tests — the pipeline
# runs green offline via MockLLMClient + FixtureSource. Install with: uv pip install -e ".[live]"
live = [
    "google-genai>=1.0",
    "praw>=7.7",
    "feedparser>=6.0",
]

[project.scripts]
quantlab = "quantlab.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E702: compact single-line assignments are an intentional style in the event loop / CLI wiring.
ignore = ["E702"]
